[package]
name = "curve"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "curve"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-spl = { version = "0.31.1", features = ["metadata"] }
anchor-lang = { version = "0.31.1", features = ["event-cpi", "init-if-needed"] }
